promjene footer strelice

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -208,7 +208,7 @@ input#contact-submit-dugme {
   text-decoration: none;
   height: 61px;
   width: 38px;
-  background: transparent url("../img/themes.gif") no-repeat left top;
+  background: transparent url("../img/themes1.png") no-repeat left top;
   margin-top: -45px;
   }
 
